fix case sensitivity of "Ignore 'The'" option in the organize dialog.

BUG: 237831